about photo align issue fix

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,17 +1,16 @@
 .about-section {
     display: flex;
     width: 100%;
-    height: 100vh;
     background-color: var(--primary-color);
     padding: 2% 0;
 
     /* ------------------------------------------------ */
     .about-image-section {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 48%;
-        height: 100%;
 
         /* -------------------------------------------- */
         .about-image {
@@ -20,6 +19,7 @@
             align-items: center;
             width: 420px;
             height: 550px;
+            transform: translateY(-50px);
             background-color: var(--secondary-color);
             box-shadow: -50px 50px 0 0 var(--primary-text-color);
 
